// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leagues If User is logged in should render Leagues component without presenting any league 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-info text-white w-75 mx-auto"
  >
    You are not a member of any league yet
  </h1>
  <button
    class="fs-3 bg-default rounded m-5 p-4 button-border-focus position-absolute bottom-0 start-0"
  >
    New League
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-plus fa-2x ms-3 pt-1 pb-2 align-middle"
      data-icon="circle-plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM232 344V280H168c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H280v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Leagues If User is logged in should render all the leagues the user is member of 1`] = `
<DocumentFragment>
  <div
    class="text-center my-5 fs-1"
  >
    My Leagues
  </div>
  <div
    class="w-50 my-2 mx-auto"
  >
    <table
      class="table rounded bg-white table-hover fs-5 text-center"
    >
      <thead>
        <tr>
          <th
            class="p-3"
          >
            League Title
          </th>
          <th
            class="p-3"
          >
            Members Number
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="clickable"
        >
          <td
            class="align-middle"
          >
            Big League
          </td>
          <td
            class="align-middle"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="fs-3 bg-default rounded m-5 p-4 button-border-focus position-absolute bottom-0 start-0"
  >
    New League
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-plus fa-2x ms-3 pt-1 pb-2 align-middle"
      data-icon="circle-plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM232 344V280H168c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H280v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Leagues should render Leagues component if loading user 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-info text-white w-75 mx-auto"
  >
    Loading...
  </h1>
</DocumentFragment>
`;

exports[`Leagues should render Leagues component if no user is logged in 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-danger text-white w-75 mx-auto"
  >
    Please Log In to view your team
  </h1>
</DocumentFragment>
`;
